--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,15 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>HTML and CSS</title>
+</head>
+  <link rel="stylesheet" href="style.css"/>
+<body>
+  <header>
+  </header>
+  <div class="container">
+    <footer>
+    </footer>
+  </div>
+</body>
+</html>
